kustomize/base/apps/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
